--- a/.github/workflows/CI-to-DockerHub.yml
+++ b/.github/workflows/CI-to-DockerHub.yml
@@ -24,7 +24,17 @@ jobs:
     steps:
       - name: Check Out Repo 
         uses: actions/checkout@v2
-      
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -32,12 +42,6 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-            
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
           
       - name: Build and push
         id: docker_build
